--- a/main.html
+++ b/main.html
@@ -8,6 +8,83 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div data-ns-test="block- inline- button">
+		<div>
+			<p>
+				Answer: Inline
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-div">
+		<div>
+			<p>
+				Answer: Block 
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-span">
+		<div>
+			<p>
+				Answer: Inline 
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-p">
+		<div>
+			<p>
+				Answer: Block
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-input">
+		<div>
+			<p>
+				Answer: Block 
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-cite">
+		<div>
+			<p>
+				Answer: Inline 
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-code">
+		<div>
+			<p>
+				Answer: Inline
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-p">
+		<div>
+			<p>
+				Answer: Block 
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-h1">
+		<div>
+			<p>
+				Answer: Block 
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-sup">
+		<div>
+			<p>
+				Answer: Inline 
+			</p>
+		</div>
+	</div>
+	<div data-ns-test="block-inline-sub">
+		<div>
+			<p>
+				Answer: Inline
+			</p>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
