--- a/main.html
+++ b/main.html
@@ -11,6 +11,8 @@
 	<div data-ns-test="block- inline- button">
 		<div>
 			<p>
+				<button> Test1 </button>
+				<button> Test2</button>
 				Answer: Inline
 			</p>
 		</div>
@@ -18,20 +20,24 @@
 	<div data-ns-test="block-inline-div">
 		<div>
 			<p>
-				Answer: Block 
+				<button> Test1 </button>
+				<button> Test2</button>Answer: Block 
 			</p>
 		</div>
 	</div>
 	<div data-ns-test="block-inline-span">
 		<div>
 			<p>
-				Answer: Inline 
+				<button> Test1 </button>
+				<button> Test2</button>Answer: Inline 
 			</p>
 		</div>
 	</div>
 	<div data-ns-test="block-inline-p">
 		<div>
 			<p>
+				<button> Test1 </button>
+				<button> Test2</button>
 				Answer: Block
 			</p>
 		</div>
@@ -39,6 +45,8 @@
 	<div data-ns-test="block-inline-input">
 		<div>
 			<p>
+				 <button> Test1 </button>
+				<button> Test2</button>
 				Answer: Block 
 			</p>
 		</div>
@@ -46,6 +54,8 @@
 	<div data-ns-test="block-inline-cite">
 		<div>
 			<p>
+				<button> Test1 </button>
+				<button> Test2</button>
 				Answer: Inline 
 			</p>
 		</div>
@@ -53,13 +63,16 @@
 	<div data-ns-test="block-inline-code">
 		<div>
 			<p>
-				Answer: Inline
+				<button> Test1 </button>
+				<button> Test2</button>Answer: Inline
 			</p>
 		</div>
 	</div>
 	<div data-ns-test="block-inline-p">
 		<div>
 			<p>
+				<button> Test1 </button>
+				<button> Test2</button>
 				Answer: Block 
 			</p>
 		</div>
@@ -67,6 +80,8 @@
 	<div data-ns-test="block-inline-h1">
 		<div>
 			<p>
+				<button> Test1 </button>
+				<button> Test2</button>
 				Answer: Block 
 			</p>
 		</div>
@@ -74,6 +89,8 @@
 	<div data-ns-test="block-inline-sup">
 		<div>
 			<p>
+				<button> Test1 </button>
+				<button> Test2</button>
 				Answer: Inline 
 			</p>
 		</div>
@@ -81,6 +98,8 @@
 	<div data-ns-test="block-inline-sub">
 		<div>
 			<p>
+				<button> Test1 </button>
+				<button> Test2</button>
 				Answer: Inline
 			</p>
 		</div>
