--- a/main.html
+++ b/main.html
@@ -8,17 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
 	<div data-ns-test="block- inline- button">
-		<div>
 			<p>
-				<button> Test1 </button>
-				<button> Test2</button>
+				<button> Test1 
+				<p>
+				Always specify the type attribute for a element, to tell browsers what type of button it is.
+				</p></button>
+				<button> Test2 
+				<p> 
+					Always specify the type attribute for a element, to tell browsers what type of button it is.
+				</p>
+				</button>
 				Answer: Inline
 			</p>
-		</div>
 	</div>
+	</div>
+	<div>
 	<div data-ns-test="block-inline-div">
-		<div>
+		
 			<p>
 				<button> Test1 </button>
 				<button> Test2</button>Answer: Block 
