--- a/main.html
+++ b/main.html
@@ -11,15 +11,8 @@
 	<div>
 	<div data-ns-test="block- inline- button">
 			<p>
-				<button> Test1 
-				<p>
-				Always specify the type attribute for a element, to tell browsers what type of button it is.
-				</p></button>
-				<button> Test2 
-				<p> 
-					Always specify the type attribute for a element, to tell browsers what type of button it is.
-				</p>
-				</button>
+				<button> Test1 </button>
+				<button> Test2</button>
 				Answer: Inline
 			</p>
 	</div>
