--- a/main.html
+++ b/main.html
@@ -8,102 +8,82 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
 	<div data-ns-test="block- inline- button">
-			<p>
+			
 				<button> Test1 </button>
 				<button> Test2</button>
 				Answer: Inline
-			</p>
 	</div>
-	</div>
-	<div>
+
 	<div data-ns-test="block-inline-div">
-		
-			<p>
-				<button> Test1 </button>
-				<button> Test2</button>Answer: Block 
-			</p>
-		</div>
+	
+				<div> Test1 </div>
+				<div> Test2</div>
+				Answer: Block 
+
 	</div>
 	<div data-ns-test="block-inline-span">
-		<div>
-			<p>
-				<button> Test1 </button>
-				<button> Test2</button>Answer: Inline 
-			</p>
-		</div>
+	
+				<span> Test1 </span>
+				<span> Test2</span>
+		Answer: Inline 
+	
 	</div>
 	<div data-ns-test="block-inline-p">
-		<div>
-			<p>
-				<button> Test1 </button>
-				<button> Test2</button>
+		
+				<p> Test1 </p>
+				<p> Test2</p>
 				Answer: Block
-			</p>
-		</div>
+			
 	</div>
 	<div data-ns-test="block-inline-input">
-		<div>
-			<p>
-				 <button> Test1 </button>
-				<button> Test2</button>
+		
+				 <input> Test1 </input>
+				<input> Test2</input>
 				Answer: Block 
-			</p>
-		</div>
+			
 	</div>
 	<div data-ns-test="block-inline-cite">
-		<div>
-			<p>
-				<button> Test1 </button>
-				<button> Test2</button>
+	
+				<cite> Test1 </cite>
+				<cite> Test2</cite>
 				Answer: Inline 
-			</p>
-		</div>
+			
 	</div>
 	<div data-ns-test="block-inline-code">
-		<div>
-			<p>
-				<button> Test1 </button>
-				<button> Test2</button>Answer: Inline
-			</p>
-		</div>
+		
+				<code> Test1 </code>
+				<code> Test2</code>
+				Answer: Inline
+			
 	</div>
 	<div data-ns-test="block-inline-p">
-		<div>
-			<p>
-				<button> Test1 </button>
-				<button> Test2</button>
+		
+				<p> Test1 </p>
+				<p> Test2</p>
 				Answer: Block 
-			</p>
-		</div>
+			
 	</div>
 	<div data-ns-test="block-inline-h1">
-		<div>
-			<p>
-				<button> Test1 </button>
-				<button> Test2</button>
+		
+				<h1> Test1 </h1>
+				<h1> Test2</h1>
 				Answer: Block 
-			</p>
-		</div>
+		
 	</div>
 	<div data-ns-test="block-inline-sup">
-		<div>
-			<p>
-				<button> Test1 </button>
-				<button> Test2</button>
+		
+				<sup> Test1 </sup>
+				<sup> Test2</sup>
 				Answer: Inline 
-			</p>
-		</div>
+		
 	</div>
 	<div data-ns-test="block-inline-sub">
-		<div>
-			<p>
-				<button> Test1 </button>
-				<button> Test2</button>
+		
+				<sub> Test1 </sub>
+				<sub> Test2</sub>
 				Answer: Inline
-			</p>
-		</div>
+			
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
