--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
 		
 				 <input> Test1 </input>
 				<input> Test2</input>
-				Answer: Block 
+				Answer: Inline
 			
 	</div>
 	<div data-ns-test="block-inline-cite">
@@ -57,13 +57,7 @@
 				Answer: Inline
 			
 	</div>
-	<div data-ns-test="block-inline-p">
-		
-				<p> Test1 </p>
-				<p> Test2</p>
-				Answer: Block 
-			
-	</div>
+
 	<div data-ns-test="block-inline-h1">
 		
 				<h1> Test1 </h1>
